//*
//Compile:
//export SRC_DIR=protobuf
//export DST_DIR=protobuf
//protoc -I=$SRC_DIR --python_out=$DST_DIR $SRC_DIR/iotpond1.proto
//*/

syntax = "proto3";

import "google/protobuf/timestamp.proto";

message Pond {
    string created_at = 1;
    int32 entry_id = 2;
    float temperature = 3;
    int32 turbidity = 4;
    float dissolved_oxygen = 5;
    float ph = 6;
    float ammonia = 7;
    int32 nitrate = 8;
    int32 population = 9;
    float fish_length = 10;
    float fish_weight = 11;
}

message PondNormal {
    google.protobuf.Timestamp created_at = 1;
    int32 entry_id = 2;
    float temperature = 3;
    int32 turbidity = 4;
    float dissolved_oxygen = 5;
    float ph = 6;
    float ammonia = 7;
    int32 nitrate = 8;
    int32 population = 9;
    float fish_length = 10;
    float fish_weight = 11;
}

